--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -13,7 +13,19 @@
     <link rel="stylesheet" href="~/adminlte/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/adminlte/dist/css/adminlte.min.css">
+    <!-- jQuery -->
+    @*<script src="~/adminlte/plugins/jquery/jquery.min.js"></script>*@
+    <script src="~/adminlte/plugins/jquery.min.js"></script>
 
+    @*    <script src="~/adminlte/plugins/jquery/jquery-confirm.min.js"></script>
+    <link rel="stylesheet" href="~/adminlte/plugins/jquery/jquery-confirm.min.css/">*@
+    <!-- jQuery UI 1.11.4 -->
+    <script src="~/adminlte/plugins/jquery-ui/jquery-ui.min.js"></script>
+
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+        $.widget.bridge('uibutton', $.ui.button)
+    </script>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -57,14 +69,6 @@
 
                         <li class="nav-header">Management</li>
                         <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Chucvu" class="nav-link">
-                                <i class="nav-icon fas fa-users"></i>
-                                <p>
-                                    Quản lý chức vụ
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a asp-controller="Nhanvien" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-users"></i>
                                 <p>
@@ -98,7 +102,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a asp-controller="System" class="nav-link">
                                 <i class="nav-icon fas fa-book"></i>
                                 <p>
                                     Quản trị hệ thống
@@ -107,19 +111,19 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="pages/examples/invoice.html" class="nav-link">
+                                    <a asp-controller="System" asp-action="Phanquyen" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Phân quyền</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/examples/profile.html" class="nav-link">
+                                    <a asp-controller="System" asp-action="Chucvu" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Chức vụ</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/examples/e-commerce.html" class="nav-link">
+                                    <a asp-controller="System" asp-action="Taikhoan" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Tài khoản</p>
                                     </a>
@@ -145,26 +149,16 @@
                 <b>Version</b> 3.2.0
             </div>
         </footer>
-
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Control sidebar content goes here -->
-        </aside>
-        <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
-    <!-- jQuery -->
-    <script src="~/adminlte/plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="~/adminlte/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-        $.widget.bridge('uibutton', $.ui.button)
-    </script>
     <!-- Bootstrap 4 -->
     <script src="~/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminlte/dist/js/adminlte.js"></script>
+    <!-- mustache -->
+    <script type='text/javascript' src='~/adminlte/plugins/jquery-mustache/mustache.min.js'></script>
+    <script type='text/javascript' src="~/adminlte/plugins/jquery-mustache/jquery.mustache.min.js"></script>
+    <script type='text/javascript' src="~/adminlte/plugins/jquery-validation/jquery.validate.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
