--- a/Views/Phong/Index.cshtml
+++ b/Views/Phong/Index.cshtml
@@ -75,7 +75,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Thêm khách hàng</h4>
+                <h4 class="modal-title"></h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -120,15 +120,12 @@
     $(function () {
         GetAllLoaiphong();
         $('#tabLoaiPhong').on('click', function () {
-            $('#tabLoaiPhongContent').html('');
             GetAllLoaiphong();
         })
         $('#tabPhong').on('click', function () {
-            $('#tabPhongContent').html('');
             GetAllPhong();
         })
         $('#tabLichDatPhong').on('click', function () {
-            $('#tabLichDatPhongContent').html('');
             GetAllKhachhang();
             GetAllPhongData();
             GetAllPhieudatphong();
@@ -326,19 +323,18 @@
 
                             $(".btnDelete").on("click", function () {
                                 let id = this.id.split('_')[1];
-                                $.ajax(
-                                    {
-                                        type: "DELETE",
-                                        data: { id: id },
-                                        async: false,
-                                        url: "@Url.Action("XoaLoaiphong", "Phong")",
-                                        success: function (data) {
-                                            GetAllLoaiphong();
-                                        },
-                                        error: function () {
-                                            GetAllLoaiphong();
-                                        }
-                                    });
+                                $.ajax({
+                                    type: "DELETE",
+                                    data: { id: id },
+                                    async: false,
+                                    url: "@Url.Action("XoaLoaiphong", "Phong")",
+                                    success: function (data) {
+                                        GetAllLoaiphong();
+                                    },
+                                    error: function () {
+                                        GetAllLoaiphong();
+                                    }
+                                });
                             });
 
                         }
